testsuite/tests/rebindable/rebindable11.stderr

rebindable11.hs:10:19: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the expression: 'a'
      In the expression: if 'a' then () else ()
      In an equation for ‘foo’: foo = if 'a' then () else ()

rebindable11.hs:11:10: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the expression: 'a'
      In the first argument of ‘(*)’, namely ‘(if 'a' then () else ())’
      In the first argument of ‘(+)’, namely
        ‘(if 'a' then () else ()) * 2’

rebindable11.hs:12:9: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the expression: 'a'
      In the expression: if 'a' then () else ()
      In an equation for ‘a3’: a3 = if 'a' then () else ()

rebindable11.hs:13:13: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the expression: 'a'
      In the first argument of ‘(==)’, namely ‘(if 'a' then () else ())’
      In the expression: (if 'a' then () else ()) == 10

rebindable11.hs:14:17: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the expression: 'a'
      In the body of a static form: (if 'a' then () else ())
      In the expression: static (if 'a' then () else ())

rebindable11.hs:15:10: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the expression: 'a'
      In the expression: (if 'a' then () else ()) :: Int
      In an equation for ‘a6’: a6 = (if 'a' then () else ()) :: Int

rebindable11.hs:18:21: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the expression: 'a'
      In the ‘field’ field of a record
      In the expression: A {field = if 'a' then () else ()}

rebindable11.hs:19:53: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘Char’
    • In the second argument of ‘(==)’, namely ‘'a'’
      In the expression: True == 'a'
      In the expression: if True == 'a' then () else ()
